src/test/ui/tool-attributes/diagnostic_item.stderr
error[E0658]: diagnostic items compiler internal support for linting
  --> $DIR/diagnostic_item.rs:1:1
   |
LL | #[dustc_diagnostic_item = "foomp"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(dustc_attrs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
